k3s/ghost.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: ghost:3.14.0-alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 2368
        volumeMounts:
          - mountPath: /var/lib/ghost/content
            name: content
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - k3s2
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: blog-content

---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  type: ClusterIP
  selector:
    app: blog
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 2368

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blog
spec:
  rules:
  - host: blog.192.168.99.81.xip.io
    http:
      paths:
      - backend:
          serviceName: blog
          servicePort: 8080
